# smart_lock_rk3566

./: .gitignore  CMakeLists.txt  README.md
app/ctl/: CMakeLists.txt
app/ctl/src/: main.cpp
app/keyt/: CMakeLists.txt
app/test/: CMakeLists.txt
app/test/adb/: board.sh
app/test/dev/: CMakeLists.txt
app/test/dev/src/: main.cpp
app/test/face/: CMakeLists.txt
app/test/face/src/: main.cpp
app/test/flow/: CMakeLists.txt
app/test/flow/src/: main.cpp
app/test/host/: face_smoke.sh
app/test/key/: CMakeLists.txt
app/test/key/src/: main.cpp
app/test/oled/: CMakeLists.txt
app/test/oled/src/: main.cpp
app/test/run/: CMakeLists.txt
app/test/run/src/: main.cpp
app/test/sensor/: CMakeLists.txt
app/test/sensor/src/: main.cpp
app/test/servo/: CMakeLists.txt
app/test/servo/src/: main.cpp
app/test/state/: CMakeLists.txt
app/test/state/src/: main.cpp
apps/controller/: main.cpp  state_machine.cpp  state_machine.h
build-board-key/: CMakeCache.txt  Makefile  cmake_install.cmake  total_controller  total_keypad_test
cmake/: rk3566_toolchain.cmake
core/run/: CMakeLists.txt
core/run/include/run/: cam_hold.h  wake_ctl.h
core/run/src/: cam_hold.cpp  wake_ctl.cpp
core/state/: CMakeLists.txt
core/state/include/state/: state.h  status.h
core/state/src/: state.cpp
docs/: adb.md  refactor.md  test_order.md  tree.md  verify.md
docs/plans/: initial-import.md  modular-refactor.md
docs/progress/: 2026-04-04.md
drivers/kernel_bridge/: hw_bridge.cpp  hw_bridge.h
drivers/week3_kernel/: Makefile  key.h  key_debug_test  key_once  key_test  key_test.c  led.h  main.c  oled.h  sensor.c  sensor.h  sensor_test  sensor_test.c  servo.h
drivers/week3_kernel/.tmp_versions/: mydev.mod
drv/mydev/: CMakeLists.txt  Makefile
drv/mydev/src/: key.c  key_debug_test.c  key_once.c  led.c  oled.c  servo.c
face/pipe/: CMakeLists.txt
face/pipe/include/pipe/: face_pipe.h
face/pipe/src/: face_pipe.cpp
hal/dev/: CMakeLists.txt
hal/dev/include/dev/: dev.h
hal/dev/src/: dev.cpp
include/: total_state.h
modules/camera_runtime/: camera_runtime.cpp  camera_runtime.h
modules/face_db/: README.md
modules/inference_pipeline/: face_bridge.cpp  face_bridge.h
modules/interaction/: README.md
res/: README.md
res/db/: face.db
res/model/: rec.rknn  rec_i8.rknn
res/sql/: face.sql
scripts/: init_res.sh  mk_db.py
test/host/: face_core_test.cpp  run_face_core_test.sh
tests/: keypad_test_main.cpp
third/rknn_face/: CMakeLists.txt
third/rknn_face/src/: camera.cpp  camera.h  face_alignment.cpp  face_database.h  face_recognizer.h  face_types.h  mobilefacenet.h  rknn_common.cpp  rknn_common.h  visualize.cpp  yolo_face.cpp  yolo_face.h
